# engineering-ai

./: .gitignore  README.md
curso-ia/: interactive_tips.py  llm-01_notebook.ipynb  llm-02_notebook.ipynb  pyproject.toml  rag-qdrant.py  rag-qdrant_notebook.ipynb  rag.py  rag_notebook.ipynb  tokenization-02.py  tokenization-03.py  tokenization-04.py  tokenization_notebook-03.ipynb  tokenization_notebook-04.ipynb
curso-ia/db/data/: meta.json
curso-ia/db/data/collection/ml_documents/: storage.sqlite
curso-ia/docling/: 1-extraction_notebook.ipynb  2-extraction-images_notebook.ipynb  3-chunking_notebook.ipynb  4-hybrid-chunker_notebook.ipynb
curso-ia/fundamentos/: tokenization-01.py  tokenization-02.py
curso-ia/indexdir/: MAIN_2pi12swvejpuy9rj.seg  _MAIN_1.toc
