[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nltk>=3.9.2",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
