[project]
name = "curso-ia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.33.0",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "openai>=2.3.0",
    "pydantic>=2.12.0",
    "qdrant-client>=1.15.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "whoosh>=2.7.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
